--- a/TA1/index.html
+++ b/TA1/index.html
@@ -6,19 +6,21 @@
 
     <link rel="stylesheet" href="style/main.css">
 
+    <script src="js/main.js" defer></script>
+
     <title>Trabalho Avaliativo 1</title>
 </head>
 <body>
     <header>
         <div class="container">
             <nav>
-                <a href="#">Home</a>
-                <a href="#">Sobre</a>
+                <a href="index.html">Home</a>
+                <a href="html/sobre.html">Sobre</a>
                 <a href="#">Contato</a>
             </nav>
             <div>
-            <button class="btn1">Sign In</button>
-            <button class="btn2" type="menu">Sing Up</button>
+            <a href="#"><button class="btn1">Sign In</button></a>
+            <a href="#"><button class="btn2" type="menu">Sing Up</button></a>
             </div>
         </div>
         <div class="title-main">
@@ -29,12 +31,45 @@
             </div>
         </div>
         <div class="container-2">
-            <button class="btn3">Saiba mais</button>
-            <button class="btn4">Demo</button>
+            <a href="#"></a><button class="btn3">Saiba mais</button></a>
+            <a href="#"></a><button class="btn4">Demo</button></a>
+        </div>
+        <div class="container-3">
+            <a href="#"><img src="img/Picture.png" alt=""></a>
+            <div style="margin-left: 2%;">
+            <h3>Quanto mais você trabalhar por algo, melhor você se sentirá ao alcançá-lo.</h3>
+            <a href="#"><h4>Assistir a pré-visualização</h4></a>
+            </div>
         </div>
     </header>
     <div class="corpo">
-        <h1></h1><h1></h1><h1></h1><h1></h1>
-    </div>
+        <div class="form" id="form">
+             <div class="form-box" id="form">
+                <h1 class="form-title">Deixe o seu recado</h1>
+                <div>
+                    <label for="nome">Nome:</label>
+                    <input type="text" id="nome" placeholder="Informe seu nome" required="required">
+                </div>
+                <div>
+                    <label for="mensagem">Sua mensagem:</label>
+                    <input type="text" id="mensagem" placeholder="Digite a sua mensagem" required="required">
+                </div>
+                <div>
+                    <button id="submit" onclick="submit()" class="btn-submit">Enviar</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="to-do-list-box">
+                        <ul id="mensagens">
+
+
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
 </body>
 </html>
