Atualização tardia 15/06(part2)

--- a/TA1/html/sobre.html
+++ b/TA1/html/sobre.html
@@ -42,6 +42,9 @@
             </div>
           </div>
           </div>
-      </div>
+    </div>
+    <footer>
+      <div class="estouNoChao" onclick="creditos()">Créditos</div>
+  </footer>
 </body>
 </html>
