--- a/TA1/index.html
+++ b/TA1/index.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" href="style/main.css">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+
     <script src="js/main.js" defer></script>
 
     <title>Trabalho Avaliativo 1</title>
@@ -58,18 +60,13 @@
                     <button id="submit" onclick="submit()" class="btn-submit">Enviar</button>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="to-do-list-box">
-                        <ul id="mensagens">
-
-
-                        </ul>
-                    </div>
+            <div id="mural-box" class="mural-box">
+                <div id="mural" class="mural-itens">
                 </div>
-
             </div>
-
         </div>
+    <footer>
+        <div class="estouNoChao" onclick="creditos()">Créditos</div>
+    </footer>
 </body>
 </html>
