--- a/TA1/html/sobre.html
+++ b/TA1/html/sobre.html
@@ -1,50 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../style/main.css">
-    <link rel="stylesheet" href="../style/sobre.css">
+  <link rel="stylesheet" href="../style/main.css">
+  <link rel="stylesheet" href="../style/sobre.css">
 
-    <title>Sobre</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+    integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+
+  <script src="../js/main.js" defer></script>
+
+  <title>Sobre</title>
 </head>
-<body>
-    <header>
-        <div class="container">
-            <nav>
-                <a href="../index.html">Home</a>
-                <a href="html/sobre.html">Sobre</a>
-                <a href="#">Contato</a>
-            </nav>
-            <div>
-                <a href="#"><button class="btn1">Sign In</button></a>
-                <a href="#"><button class="btn2" type="menu">Sing Up</button></a>
-            </div>
-        </div>
 
-        <div class="title-main-sobre">
-            <h5>Conheça a equipe de 1</h5>
-        </div>
-    </header>
-    
-    <div class="container-sobre">
-        <div class="row">
-          <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="our-team">
-              <div class="picture">
-                <img class="img-fluid" src="https://avatars.githubusercontent.com/u/14998299?v=4">
-              </div>
-              <div class="team-content">
-                <h3 class="name">Rafael Caminha</h3>
-                <h4 class="title">Devs init - Design ❤ - UI/UX no futuro</h4>
-              </div>
-            </div>
-          </div>
-          </div>
+<body>
+  <header>
+    <div class="container">
+      <nav>
+        <a href="../index.html">Home</a>
+        <a href="html/sobre.html">Sobre</a>
+        <a href="contato.html">Contato</a>
+      </nav>
+      <div>
+        <a href="#"><button class="btn1">Sign In</button></a>
+        <a href="#"><button class="btn2" type="menu">Sing Up</button></a>
+      </div>
     </div>
-    <footer>
-      <div class="estouNoChao" onclick="creditos()">Créditos</div>
+
+    <div class="title-main-sobre">
+      <h5>Conheça a equipe de 1</h5>
+    </div>
+
+    <div class="container-sobre">
+
+      <div class="our-team">
+        <div class="picture">
+          <img class="img-fluid" src="https://avatars.githubusercontent.com/u/14998299?v=4">
+        </div>
+        <div class="team-content">
+          <h3 class="name">Rafael Caminha</h3>
+          <h4 class="title">Devs init - Design ❤ - UI/UX no futuro</h4>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <footer>
+    <div class="estouNoChao" onclick="creditos()">Créditos</div>
   </footer>
+
 </body>
+
 </html>
