--- a/TA1/index.html
+++ b/TA1/index.html
@@ -18,7 +18,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="html/sobre.html">Sobre</a>
-                <a href="#">Contato</a>
+                <a href="html/contato.html">Contato</a>
             </nav>
             <div>
             <a href="#"><button class="btn1">Sign In</button></a>
@@ -65,6 +65,7 @@
                 </div>
             </div>
         </div>
+    </div>
     <footer>
         <div class="estouNoChao" onclick="creditos()">Créditos</div>
     </footer>
